fixed the section scrollbar width

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -11,21 +11,10 @@ html {
 
 /* Works on Firefox */
 * {
-  scrollbar-width: thin;
-  scrollbar-color: $primary $black1;
+  scrollbar-width: none;
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 8px;
-}
-
-*::-webkit-scrollbar-track {
-  background: $black1;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: $primary;
-  border-radius: 20px;
-  border: 1px solid $black1;
+  width: 0;
 }
