--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -7,7 +7,6 @@
   left: 0;
   right: 0;
   z-index: 10;
-  width: calc(100% - 8px);
 
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0);
